<resources>
    <string name="app_name" translatable="false">MyFefuFit</string>
    <string name="label_hello_world">Hello World!</string>
    <string name="action_hello">Hello user</string>
    <string name="label_heading_welcome_text">Probably the best fitness tracker in FEFU</string>
    <string name="label_sub_heading_welcome_text">Created by student Mashyanov V.A.</string>
    <string name="label_register_button">Register</string>
    <string name="label_login_text_view">Already have an account?</string>
    <string name="label_reg_page_title">Registration</string>
    <string name="label_login_reg">Login</string>
    <string name="label_nickname_reg">Name or nickname</string>
    <string name="label_password_reg">Password</string>
    <string name="label_password_2_reg">Repeat password</string>
    <string name="lable_male">Male</string>
    <string name="lable_female">Female</string>
    <string name="lable_other">Other</string>
    <string name="label_gender">Gender</string>
    <string name="label_reg_consent">By clicking the button, you agree to the privacy policy and personal data processing, and also accept the user agreement</string>
    <string name="label_login_page_title">Login</string>
    <string name="label_login_button">Login</string>
    <string name="label_menu_sports">Activity</string>
    <string name="label_menu_profile">Profile</string>
    <string name="label_tab_my">My</string>
    <string name="label_tab_users">Users</string>
    <string name="label_change_password">Change password</string>
    <string name="label_old_password">Old Password</string>
    <string name="label_new_password">New Password</string>
    <string name="label_accept">Accept</string>
</resources>