<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/headerLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/arrow_back_btn"
                style="@style/ArrowBack"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/PageTitle"
                style="@style/PageTitle"
                android:text="@string/label_reg_page_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/RegistrationFormLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            app:layout_constraintTop_toBottomOf="@+id/headerLinearLayout">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/RegTextInputLayout"
                android:hint="@string/label_login_reg">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/RegTextInputLayout"
                android:hint="@string/label_nickname_reg">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                style="@style/RegTextInputLayout"
                android:hint="@string/label_password_reg"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/RegTextInputLayout"
                android:hint="@string/label_password_2_reg"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/GenreTypeHead"
            style="@style/GenreTypeHead"
            android:text="@string/label_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RegistrationFormLinearLayout" />

        <RadioGroup
            android:id="@+id/GenreTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="10dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GenreTypeHead">

            <RadioButton
                style="@style/RadioButtonReg"
                android:text="@string/lable_male"

                />

            <RadioButton
                style="@style/RadioButtonReg"
                android:text="@string/lable_female" />

            <RadioButton
                style="@style/RadioButtonReg"
                android:text="@string/lable_other" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            style="@style/registerButtonReg"
            android:text="@string/label_register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GenreTypes" />

        <TextView
            android:id="@+id/RegConsent"
            style="@style/RegConsent"
            android:text="@string/label_reg_consent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>