<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/arrow_back_btn"
            style="@style/ArrowBack"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/PageTitle"
            style="@style/PageTitle"
            android:text="@string/label_change_password" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/RegistrationFormLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@+id/headerLinearLayout">

        <com.google.android.material.textfield.TextInputLayout

            style="@style/RegTextInputLayout"
            android:hint="@string/label_old_password"
            app:passwordToggleEnabled="true"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/RegTextInputLayout"
            android:hint="@string/label_new_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/RegTextInputLayout"
            android:hint="@string/label_password_2_reg"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/acceptButton"
        style="@style/registerButtonReg"
        android:text="@string/label_accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegistrationFormLinearLayout" />



</androidx.constraintlayout.widget.ConstraintLayout>