<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/WelcomeScreenimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_welcome_screenimage"
        app:layout_constraintBottom_toTopOf="@+id/HeadingWelcomeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HeadingWelcomeText"
        style="@style/HeadingWelcomeText"
        android:paddingHorizontal="20dp"
        android:text="@string/label_heading_welcome_text"
        app:layout_constraintBottom_toTopOf="@+id/SubHeadingWelcomeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeScreenimage" />

    <TextView
        android:id="@+id/SubHeadingWelcomeText"
        style="@style/SubHeadingWelcomeText"
        android:text="@string/label_sub_heading_welcome_text"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeadingWelcomeText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        style="@style/registerButton"
        android:text="@string/label_register_button"
        app:layout_constraintBottom_toTopOf="@+id/loginTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SubHeadingWelcomeText" />


    <TextView
        android:id="@+id/loginTextView"
        style="@style/loginTextView"
        android:text="@string/label_login_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

