<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/arrow_back_btn"
            style="@style/ArrowBack"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/PageTitle"
            style="@style/PageTitle"
            android:text="@string/label_login_page_title" />
    </LinearLayout>


    <ImageView
        android:id="@+id/LoginScreenimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_welcome_screenimage"
        app:layout_constraintTop_toBottomOf="@+id/headerLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
         />

    <LinearLayout
        android:id="@+id/LoginFormLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@+id/LoginScreenimage">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/RegTextInputLayout"
            android:hint="@string/label_login_reg">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/RegTextInputLayout"
            android:hint="@string/label_password_reg"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/registerButtonReg"
        android:text="@string/label_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginFormLinearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>